Refactor build output: remove old CSS/JS files and update index.html with new references

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write ."
   },
-  "author": "",
+  "targets": {
+    "default": {
+      "distDir": "./"
+    }
+  },
+  "author": "carpediem23",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.4.1",
