--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "carpediem23 Web Thing",
+  "name": "carpediem23's Virtual Card",
   "short_name": "carpediem23",
-  "description": "Welcome to carpediem23's personal web thing",
+  "description": "carpediem23's Virtual Card Application",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f0f0f",
@@ -10,6 +10,11 @@
     {
       "src": "assets/images/profile_transparent.webp",
       "sizes": "192x192",
+      "type": "image/webp"
+    },
+    {
+      "src": "assets/images/profile_transparent.webp",
+      "sizes": "512x512",
       "type": "image/webp"
     }
   ]
