--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carpediem23.github.io",
   "version": "1.0.0",
-  "description": "carpediem23 Web Thing",
+  "description": "carpediem23 Virtual Card web application.",
   "source": "./index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
