--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#00ff18",
   "icons": [
     {
-      "src": "assets/images/profile_transparent.webp",
+      "src": "assets/images/profile_transparent.png",
       "sizes": "192x192",
       "type": "image/webp"
     },
     {
-      "src": "assets/images/profile_transparent.webp",
+      "src": "assets/images/profile_transparent.png",
       "sizes": "512x512",
       "type": "image/webp"
     }
