--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
   "name": "carpediem23's Virtual Card",
-  "short_name": "carpediem23",
+  "short_name": "carpediem23vCard",
   "description": "carpediem23's Virtual Card Application",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
+  "lang": "en",
+  "dir": "ltr",
+  "installable": true,
   "background_color": "#0f0f0f",
   "theme_color": "#00ff18",
   "icons": [
