--- a/manifest.json
+++ b/manifest.json
@@ -8,18 +8,34 @@
   "lang": "en",
   "dir": "ltr",
   "installable": true,
+  "categories": [
+    "development",
+    "javascript",
+    "technology"
+  ],
   "background_color": "#0f0f0f",
   "theme_color": "#00ff18",
   "icons": [
     {
       "src": "assets/images/profile_transparent.png",
       "sizes": "192x192",
-      "type": "image/webp"
+      "type": "image/webp",
+      "purpose": "any"
     },
     {
       "src": "assets/images/profile_transparent.png",
       "sizes": "512x512",
-      "type": "image/webp"
+      "type": "image/webp",
+      "purpose": "any"
     }
-  ]
+  ],
+  "shortcuts": [
+    {
+      "name": "Home",
+      "url": "/"
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 }
